--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
     "name": "yuque-theme",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "description": "",
     "main": "index.js",
     "scripts": {
         "dev:popup": "esbuild src/popup/index.html src/popup/index.css src/popup/index.ts --bundle --loader:.html=copy --loader:.css=copy --loader:.webp=dataurl --outdir=dist/popup --watch",
         "build:popup": "esbuild src/popup/index.html src/popup/index.css src/popup/index.ts --bundle --loader:.html=copy --loader:.css=copy --loader:.webp=dataurl --outdir=dist/popup",
-        "build:index": "esbuild src/index.ts --bundle --loader:.css=text --outfile=dist/scripts/content_scripts.js --minify",
+        "build:index": "node scripts/build-index.js",
         "build": "node scripts/build.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
+    "browserslist": [
+        "defaults and supports es6-module",
+        "maintained node versions"
+    ],
     "devDependencies": {
+        "autoprefixer": "^10.4.13",
         "esbuild": "^0.15.15",
+        "postcss": "^8.4.19",
+        "postcss-minify": "^1.1.0",
         "shelljs": "^0.8.5",
         "typescript": "^4.9.3"
     }
